# fingertree-rs

./: .travis.yml  Cargo.toml  README.md
benches/: criterion.rs
scripts/: coverage
src/: digit.rs  iter.rs  lib.rs  main.rs  measure.rs  measured.rs  monoid.rs  node.rs  reference.rs  test.rs  tree.rs
src/test/: mod.rs  quickcheck.rs  simple.rs
